# eco-dashboard-renault

./: .bandit  .gitignore  CHART_FIX_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  EQUIPE.md  GITHUB_PAGES_SETUP.md  IMPLEMENTACAO_COMPLETA.md  IMPLEMENTATION_SUMMARY.md  INICIO_AQUI.md  PLANO_GITHUB_PAGES.md  PLANO_TECNICO.md  README.md  README_NOVO.md  RESUMO_ANALISE.md  SNMP_QUICKSTART.md  SNMP_SETUP.md  SOBRE.md  STATUS_FUNCIONAL.md  TEST_REPORT.md  VERSOES_DEPLOYMENT.md  app_renault_mvp.py  chart_script.py  chart_script_1.py  config.py  index.html  pyproject.toml  pytest.ini  renault_servers.json  requirements-dev.txt  requirements.txt  script.py  script_1.py  script_2.py  snmp_collector.py  sobre.html  validar_versoes.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  sustainability_improvement.yml
ai_engine/: __init__.py  recommendations.py
config/: __init__.py  carbon_data.json  settings.py
data_sources/: __init__.py  base.py  carbon_data.py  real.py  synthetic.py
docs/: API.md  ARQUITETURA_COMPARADA.md  CICD.md  DASHBOARD_USAGE.md  DEVELOPMENT.md  EXECUTIVE_SUMMARY.md  FLASK_VS_GITHUB_PAGES.md  GITHUB_PAGES_FEASIBILITY.md  GITHUB_PAGES_IMPLEMENTATION.md  GITHUB_PAGES_QUICKSTART.md  INSTALLATION.md  MACHINE_LEARNING_STRATEGY.md  TECHNICAL.md  TRANSFORMATION_DAY_2025.md
eco-ti-dashboard.zip/: app.js
examples/: database_models.py  sensor_integration.py
routes/: __init__.py  api_routes.py
templates/: dashboard.html  dashboard_new.html  sobre.html
tests/: __init__.py  test_basic.py
(+11 files in other folders)
